fixed button spacing

--- a/public/css/bubbles.css
+++ b/public/css/bubbles.css
@@ -76,15 +76,27 @@
 .button-bar{
 	position:fixed;
 	bottom: 0;
+	left:0;
 	width: 100%;
 	padding-bottom: 10px;
+}
+
+.button-bar .button-col{
+	width:25%;
+	align-items:center;
+	clear: none;
+	float: left;
 }
 
 .button-bar .bubble-button{
 	border-radius: 50%;
 	border: 2px solid #666;
-	width:100px;
-	height:100px;
+	width:20vw;
+	height:20vw;
+	max-width: 100px;
+	max-height: 100px;
+	margin-left: auto;
+	margin-right: auto;
 	background-color: #c3d0e5;
 }
 
